--- a/Ejemplo_01/app/src/main/res/layout/activity_main.xml
+++ b/Ejemplo_01/app/src/main/res/layout/activity_main.xml
@@ -66,11 +66,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText"
+        app:layout_constraintTop_toBottomOf="@+id/user"
         app:layout_constraintVertical_bias="0.024" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/user"
         android:layout_width="234dp"
         android:layout_height="45dp"
         android:layout_marginTop="8dp"
