--- a/Ejemplo_01/app/src/main/res/layout/activity_main.xml
+++ b/Ejemplo_01/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#54B500"
+    android:onClick="cambia"
     tools:context=".MainActivity">
 
     <TextView
@@ -85,7 +86,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/accept"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
